# izotrox

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
docs/: TODO.txt  architecture.md  coding_style.md  resource_directory.md  supported_android_devices.md
include/Platform/Linux/: SDLApplication.hpp
res/design/: Izotrox-ServerProfile.psd
res/icons/source/: slider-handle-focus.psd  slider-handle.psd
res/scripts/: startup.lua
res/scripts/apps/: hello.lua  test_app.lua
res/theme/: android-4.4.ini  catppuccin-mocha.ini  cyberpunk.ini  darcula.ini  default.ini  dracula.ini  ios-dark.ini  ios-light.ini  light.ini  material-light.ini  monokai.ini  mynewtheme.ini  nord.ini  solarized-light.ini  test_theme.ini  tokyo-night.ini  windows-10.ini
res/themes/: android-4.4.ini  darcula.ini  default.ini  ios-dark.ini  ios-light.ini  material-you-pink.ini  windows-10-dark.ini  windows-10-light.ini  windows-10.ini
src/: main.cpp
src/Core/: AppImplementation.hpp  Application.cpp  Application.hpp  ArgsParser.cpp  ArgsParser.hpp  File.cpp  File.hpp  IzoShell.cpp  IzoShell.hpp  Izotrox.hpp  Rect.hpp  ResourceManager.cpp  ResourceManager.hpp  Settings.cpp  Settings.hpp  SystemStats.cpp  SystemStats.hpp  Theme.hpp  ThemeDB.cpp  ThemeDB.hpp  ViewManager.cpp  ViewManager.hpp
src/Debug/: ConsoleColor.hpp  Generics.hpp  IzoShell.cpp  IzoShell.hpp  IzoShellDialog.cpp  IzoShellDialog.hpp  Izometa.hpp  Logger.cpp  Logger.hpp
src/Device/: Framebuffer.cpp  Framebuffer.hpp
src/Geometry/: Point.hpp  Primitives.cpp  Primitives.hpp  Rect.cpp  Rect.hpp
src/Graphics/: Animator.cpp  Animator.hpp  Button.cpp  Button.hpp  Canvas.cpp  Canvas.hpp  Color.cpp  Color.hpp  ColorVariant.hpp  Container.cpp  Container.hpp  Dialog.cpp  Dialog.hpp  Font.cpp  Font.hpp  Framebuffer.cpp  Framebuffer.hpp  GridLayout.cpp  GridLayout.hpp  Image.cpp  Image.hpp  Label.cpp  Label.hpp  Layout.cpp  Layout.hpp  LinearLayout.cpp  LinearLayout.hpp  ListItem.cpp  ListItem.hpp  ListView.cpp  ListView.hpp  OptionBox.cpp  OptionBox.hpp  Painter.cpp  Painter.hpp  ProgressBar.cpp  ProgressBar.hpp  ResourceManager.hpp  Slider.cpp  Slider.hpp  (+10 more)
src/HAL/: Framebuffer.cpp  Framebuffer.hpp
src/Input/: Input.cpp  Input.hpp  KeyCode.hpp
src/Lib/: inicpp.h  inicpp.hpp  magic_enum.hpp
src/Motion/: Animator.cpp  Animator.hpp
src/Platform/: AndroidDevice.cpp  AndroidDevice.hpp  MobileDevice.cpp  MobileDevice.hpp  PlatformMacros.hpp
src/Platform/Android/: AndroidApp.cpp  AndroidApp.hpp  AndroidDevice.cpp  AndroidDevice.hpp
src/Platform/Linux/: DesktopApp.cpp  DesktopApp.hpp  SDLApplication.cpp  SDLApplication.hpp
src/UI/: Enums.hpp
src/UI/Layout/: GridLayout.cpp  GridLayout.hpp  Layout.cpp  Layout.hpp  LinearLayout.cpp  LinearLayout.hpp
src/UI/View/: View.cpp  View.hpp
src/UI/Widgets/: Button.cpp  Button.hpp  CheckBox.cpp  CheckBox.hpp  Container.cpp  Container.hpp  Label.cpp  Label.hpp  ListBox.cpp  ListBox.hpp  ListItem.cpp  ListItem.hpp  OptionBox.cpp  OptionBox.hpp  OptionItem.cpp  OptionItem.hpp  ProgressBar.cpp  ProgressBar.hpp  Slider.cpp  Slider.hpp  TextBox.cpp  TextBox.hpp  Toast.cpp  Toast.hpp  Widget.cpp  Widget.hpp
src/Utils/: ASCIIColor.hpp
src/VT/: AsciiColor.hpp
src/Views/: LauncherView.cpp  LauncherView.hpp  SecondView.cpp  SecondView.hpp  SplashScreen.cpp  SplashScreen.hpp  ThemePreviewView.cpp  ThemePreviewView.hpp
src/Widgets/: Container.cpp  Container.hpp  Layout.cpp  Layout.hpp  LinearLayout.cpp  LinearLayout.hpp  ListBox.cpp  ListBox.hpp  ListItem.cpp  Widget.cpp  Widget.hpp
tools/: theme_editor.bat  theme_editor.py  theme_editor.sh
tools/theme_editor/: __init__.py  __main__.py  cli.py  core.py  enums.json  generate_schema.py  gui.py  schema_editor.py
tools/theme_editor/config/: theme_editor_config.json
tools/theme_editor/data/: schema.json
